# app/Http/Requests/API/UpdateContatoAgenteAPIRequest.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Requests\API;
+
+use App\Models\ContatoAgente;
+use InfyOm\Generator\Request\APIRequest;
+
+class UpdateContatoAgenteAPIRequest extends APIRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return ContatoAgente::$rules;
+    }
+}
